# dusza-regiister

./: MANIFEST.in  MŰKÖDÉSI LEÍRÁS.docx  config.toml  pyproject.toml  requirements.txt  setup.py  sync.py
app/: __init__.py  dashboard.py  forms.py  register.py  requirements.txt  schools.py  students.py  tables.py
app/static/: style.css
app/static/css/: style.css
app/templates/: base.html  categories.html  change_password.html  dashboard_schools.html  deadline.html  edit.html  home.html  languages.html  login.html  new_admin.html  register.html  school_add.html  schools.html  schools.teams.html  statistics.html  students.login.html  teams.html  view_team.html
migrations/versions/: 11d5aeadba95_.py  1b45f25bbc0e_migration2.py  51f908be52e4_.py  5ea30dc11bec_.py  8c1ce62e7db6_.py  ff3a0b291073_.py
