[project]
name = "app"
dependencies = [
    "AppKit==0.2.8",
    "asgiref==3.6.0",
    "Babel==2.10.3",
    "Beaker==1.13.0",
    "bokeh==3.6.1",
    "Brotli==1.0.9",
    "brotlicffi==1.1.0.0",
    "cairocffi==1.7.1",
    "Carbon==1.1.10",
    "charset_normalizer==3.0.1",
    "ConfigParser==7.1.0",
    "contextlib2==21.6.0",
    "cryptography==38.0.4",
    "cryptography.egg==info",
    "cx_Oracle==8.3.0",
    "Cython==3.0.11",
    "defcon==0.10.3",
    "defusedxml==0.7.1",
    "Django==5.1.3",
    "dl==0.1.0",
    "docutils==0.21.2",
    "dogpile.core==0.4.1",
    "email_validator==2.2.0",
    "flask_babel==4.0.0",
    "freetype_py==2.5.1",
    "fs==2.4.16",
    "glyphsLib==6.9.4",
    "HTMLParser==0.0.2",
    "hypothesis==6.118.0",
    "ipykernel==6.29.5",
    "ipython==8.12.3",
    "ipywidgets==8.1.5",
    "jnius==1.1.0",
    "keyring==23.9.3",
    "lingua==4.15.0",
    "lockfile==0.12.2",
    "lxml==4.9.2",
    "lz4==4.0.2+dfsg",
    "mtrand==0.1",
    "munkres==1.1.4",
    "numarray==1.5.1",
    "Numeric==24.2",
    "objgraph==3.6.2",
    "olefile==0.46",
    "pandas==2.2.3",
    "pickle5==0.0.12",
    "protobuf==5.28.3",
    "psutil==5.9.4",
    "PyGObject==3.42.2",
    "PyInstaller==6.11.0",
    "PyNaCl==1.5.0",
    "pyOpenSSL==23.0.0",
    "pyOpenSSL==24.2.1",
    "PyQt5==5.15.11",
    "PyQt5_sip==12.11.1",
    "PyQt6==6.7.1",
    "PyQt6_sip==13.4.1",
    "PySide2==5.15.2.1",
    "PySide6==6.8.0.2",
    "pysqlcipher3==1.2.0",
    "pytest==7.2.1",
    "python-dotenv==1.0.1",
    "pytz==2022.7.1",
    "PyYAML==6.0",
    "PyYAML==6.0.2",
    "Quartz==0.0.1.dev0",
    "railroad==0.5.0",
    "reportlab==4.2.5",
    "Res==0.1.7",
    "scipy==1.14.1",
    "scipy_doctest==1.4",
    "selenium==4.26.1",
    "setuptools_scm==8.1.0",
    "shiboken2==5.15.2.1",
    "shiboken6==6.8.0.2",
    "sip==6.8.6",
    "skimage==0.0",
    "sniffio==1.2.0",
    "Sphinx==8.1.3",
    "sphinx_gallery==0.18.0",
    "sqlcipher3==0.5.4",
    "statsmodels==0.14.4",
    "sympy==1.13.3",
    "thread==2.0.5",
    "threadpoolctl==3.5.0",
    "tornado==6.2",
    "traitlets==5.14.3",
    "trio==0.27.0",
    "trove_classifiers==2024.10.21.16",
    "truststore==0.10.0",
    "ufoLib2==0.14.0",
    "ufoLib2==0.16.1",
    "uharfbuzz==0.42.0",
    "unicodedata2==15.1.0",
    "urllib3_secure_extra==0.1.0",
    "vincent==0.4.4",
    "watchdog==2.2.1",
    "xarray==2024.10.0",
    "xattr==1.1.0",
    "xmlrpclib==1.0.1",
    "zopfli==0.2.3.post1"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
